--- a/archives.html
+++ b/archives.html
@@ -10,43 +10,35 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="./theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
-
-
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
 
 
 
 
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <link href="https://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
-  ga('create', 'G-34K3F2ZQYP', 'auto');
-  ga('send', 'pageview');
-</script>
+
 
  
 
-    <meta name="author" content="Unbound Nomad" />
+    <meta name="author" content="The Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
   <meta property="og:title" content="The Unbound Nomad"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+  <meta property="og:url" content="."/>
 
   <title>The Unbound Nomad &ndash; Archives</title>
 
@@ -56,12 +48,12 @@
 
 <aside>
   <div>
-    <a href="/">
-      <img src="/theme/img/profile.png" alt="" title="">
+    <a href="./">
+      <img src="./theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="/"></a>
+      <a href="./"></a>
     </h1>
 
 
@@ -72,34 +64,31 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                | About |
+                 href="./pages/about.html#about">
+                About
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/contact.html#contact">
-                | Contact |
+                 href="./pages/contact.html#contact">
+                Contact
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/reviews.html#reviews">
-                | Product Reviews |
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/rides.html#rides">
-                | Rides |
+                 href="./pages/rides.html#rides">
+                Rides
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
+            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
           </li>
           <li>
-            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
+            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
+          </li>
+          <li>
+            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
           </li>
       </ul>
     </nav>
@@ -147,100 +136,90 @@
   <div>
     <dl>
 
-          <dt>Tue 06 February 2024</dt>
+          <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/first-city-run.html">First City Run</a>
+          <a href="./blog/blue-ridge-parkway-tour.html">Blue Ridge Parkway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/blue-ridge-parkway-tour.html">Blue Ridge Parkway Tour</a>
+          <a href="./blog/daytona-bike-week.html">Daytona Bike Week</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/daytona-bike-week.html">Daytona Bike Week</a>
+          <a href="./blog/ohio-bike-week.html">Ohio Bike Week</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/ohio-bike-week.html">Ohio Bike Week</a>
+          <a href="./blog/sturgis-motorcycle-rally.html">Sturgis Motorcycle Rally</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/sturgis-motorcycle-rally.html">Sturgis Motorcycle Rally</a>
+          <a href="./blog/yellowstone-national-park-tour.html">Yellowstone National Park Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/yellowstone-national-park-tour.html">Yellowstone National Park Tour</a>
+          <a href="./blog/beartooth-highway-tour.html">Beartooth Highway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/beartooth-highway-tour.html">Beartooth Highway Tour</a>
+          <a href="./blog/cherohalaskyway-tour.html">Cherohala Skyway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/cherohalaskyway-tour.html">Cherohala Skyway Tour</a>
+          <a href="./blog/skyline-drive-tour.html">Skyline Drive Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="/skyline-drive-tour.html">Skyline Drive Tour</a>
-        </dd>
-          <dt>Sun 14 January 2024</dt>
-
-        <dd>
-          <a href="/tail-of-the-dragon-tour.html">Tail of the Dragon Tour</a>
+          <a href="./blog/tail-of-the-dragon-tour.html">Tail of the Dragon Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="/native-american-scenic-byway-tour.html">Native American Scenic Byway Tour</a>
+          <a href="./blog/native-american-scenic-byway-tour.html">Native American Scenic Byway Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="/badlands-tour.html">Badlands Tour</a>
+          <a href="./blog/badlands-tour.html">Badlands Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="/devils-tower-tour.html">Devil's Tower Tour</a>
+          <a href="./blog/devils-tower-tour.html">Devil's Tower Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="/natchez-trace-tour.html">Natchez Trace Tour</a>
+          <a href="./blog/natchez-trace-tour.html">Natchez Trace Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="/ohios-windy-9-tour.html">Ohio's Windy 9 Tour</a>
+          <a href="./blog/ohios-windy-9-tour.html">Ohio's Windy 9 Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="/northwest-passage-scenic-byway-tour.html">Northwest Passage Scenic Byway Tour</a>
+          <a href="./blog/northwest-passage-scenic-byway-tour.html">Northwest Passage Scenic Byway Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="/san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway Tour</a>
-        </dd>
-          <dt>Wed 13 December 2023</dt>
-
-        <dd>
-          <a href="/polarbearrun2024.html">Polar Bear Run 2024</a>
+          <a href="./blog/san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway Tour</a>
         </dd>
           <dt>Sun 19 March 2023</dt>
 
         <dd>
-          <a href="/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a>
+          <a href="./blog/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a>
         </dd>
     </dl>
   </div>
@@ -258,7 +237,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "",
+  "url" : ".",
   "image": "",
   "description": ""
 }
