--- a/drafts/marblehead-and-put-in-bay.html
+++ b/drafts/marblehead-and-put-in-bay.html
@@ -10,32 +10,24 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="../theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
-
-
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
 
 
 
 
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <link href="https://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
-  ga('create', 'G-34K3F2ZQYP', 'auto');
-  ga('send', 'pageview');
-</script>
+
 
  
 
@@ -48,11 +40,11 @@
   <meta property="og:title" content="Marblehead &amp; Put-in-Bay"/>
   <meta property="og:description" content="Distance : Ride Time 202 miles : 6 hours 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="/drafts/marblehead-and-put-in-bay.html"/>
+  <meta property="og:url" content="../drafts/marblehead-and-put-in-bay.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-13 20:14:00-06:00"/>
+  <meta property="article:published_time" content="2024-01-13 20:14:00+00:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="/author/unbound-nomad.html">
+  <meta property="article:author" content="../author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -66,12 +58,12 @@
 
 <aside>
   <div>
-    <a href="/">
-      <img src="/theme/img/profile.png" alt="" title="">
+    <a href="../">
+      <img src="../theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="/"></a>
+      <a href="../"></a>
     </h1>
 
 
@@ -82,34 +74,31 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                | About |
+                 href="../pages/about.html#about">
+                About
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/contact.html#contact">
-                | Contact |
+                 href="../pages/contact.html#contact">
+                Contact
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/reviews.html#reviews">
-                | Product Reviews |
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/rides.html#rides">
-                | Rides |
+                 href="../pages/rides.html#rides">
+                Rides
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
+            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
           </li>
           <li>
-            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
+            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
+          </li>
+          <li>
+            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
           </li>
       </ul>
     </nav>
@@ -155,7 +144,7 @@
       
     <h1 id="marblehead-and-put-in-bay">Marblehead & Put-in-Bay</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="/category/blog.html">Blog</a>
+      Posted on Sat 13 January 2024 in <a href="../category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -176,7 +165,7 @@
 <td style="text-align: center;">202 miles</td>
 <td style="text-align: center;">:</td>
 <td style="text-align: left;">6 hours</td>
-<td style="text-align: center;"><form><input type="button" value="Book Today!" onclick="window.open('https://form.jotform.com/240327747576162', '_blank')"></form></td>
+<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Marblehead & Put-in-Bay'"></FORM></td>
 </tr>
 <tr>
 <td style="text-align: center;"><br></td>
@@ -197,8 +186,8 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/motorcycles.html">Motorcycles</a>
-      <a href="/tag/lifestyle.html">Lifestyle</a>
+      <a href="../tag/motorcycles.html">Motorcycles</a>
+      <a href="../tag/lifestyle.html">Lifestyle</a>
     </p>
   </div>
 
@@ -221,7 +210,7 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "",
+  "url" : "..",
   "image": "",
   "description": ""
 }
