--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,47 +10,39 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="../theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
-
-
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
 
 
 
 
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <link href="https://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
-  ga('create', 'G-34K3F2ZQYP', 'auto');
-  ga('send', 'pageview');
-</script>
+
 
  
 
-    <meta name="author" content="Unbound Nomad" />
+    <meta name="author" content="The Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
   <meta property="og:title" content="The Unbound Nomad"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+  <meta property="og:url" content=".."/>
 
 
 
-  <title>The Unbound Nomad &ndash; | Contact |</title>
+  <title>The Unbound Nomad &ndash; Contact</title>
 
 
 </head>
@@ -58,12 +50,12 @@
 
 <aside>
   <div>
-    <a href="/">
-      <img src="/theme/img/profile.png" alt="" title="">
+    <a href="../">
+      <img src="../theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="/"></a>
+      <a href="../"></a>
     </h1>
 
 
@@ -74,34 +66,31 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                | About |
+                 href="../pages/about.html#about">
+                About
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/contact.html#contact">
-                | Contact |
+                 href="../pages/contact.html#contact">
+                Contact
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/reviews.html#reviews">
-                | Product Reviews |
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/rides.html#rides">
-                | Rides |
+                 href="../pages/rides.html#rides">
+                Rides
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
+            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
           </li>
           <li>
-            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
+            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
+          </li>
+          <li>
+            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
           </li>
       </ul>
     </nav>
@@ -145,25 +134,24 @@
 <article class="single">
   <header>
     
-    <h1 id="contact">| Contact |</h1>
+    <h1 id="contact">Contact</h1>
   </header>
   <div>
 <p>Welcome to our contact page! We're excited to hear from you. If you have any questions, suggestions, or just want to say hello, feel free to reach out through the following channels:</p>
 <ul>
 <li>
-<p><strong>Email:</strong> <b><u><a href="mailto:recipient@example.com?subject=Your%20Subject&body=Your%20Message">unboundnomad@unboundnomad.com</a></u></b></p>
+<p><strong>Email:</strong> <a href="mailto:unboundnomad@unboundnomad.com">unboundnomad@unboundnomad.com</a></p>
 </li>
 <li>
-<p><strong>Twitter:</strong> <b><u><a href="https://x.com/unbound_nomad", target="_blank">@unbound_nomad</a></u></b></p>
+<p><strong>Twitter:</strong> <a href="https://x.com/unbound_nomad">@unbound_nomad</a></p>
 </li>
 <li>
-<p><strong>Facebook:</strong> <b><u><a href="https://www.facebook.com/profile.php?id=61554818544356", target="_blank">The Unbound Nomad</a></u></b></p>
+<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61554818544356">The Unbound Nomad</a></p>
 </li>
 <li>
-<p><strong>Instagram:</strong> <b><u><a href=https://www.instagram.com/unbound_nomad/", target="_blank">@unbound_nomad</a></u></b></p>
+<p><strong>Instagram:</strong> <a href="https://www.instagram.com/unbound_nomad/">@unbound_nomad</a></p>
 </li>
 </ul>
-<p><img alt="Handshake" src="/images/handshake.png" style="display: block; margin: 0 auto"></p>
 <p>Feel free to connect with us on any of the platforms above. We value your feedback and look forward to hearing from you!</p>  </div>
 </article>
 
@@ -179,7 +167,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "",
+  "url" : "..",
   "image": "",
   "description": ""
 }
