--- a/pages/rides.html
+++ b/pages/rides.html
@@ -10,47 +10,39 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="../theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
-
-
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
 
 
 
 
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <link href="https://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
-  ga('create', 'G-34K3F2ZQYP', 'auto');
-  ga('send', 'pageview');
-</script>
+
 
  
 
-    <meta name="author" content="Unbound Nomad" />
+    <meta name="author" content="The Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
   <meta property="og:title" content="The Unbound Nomad"/>
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+  <meta property="og:url" content=".."/>
 
 
 
-  <title>The Unbound Nomad &ndash; | Rides |</title>
+  <title>The Unbound Nomad &ndash; Rides</title>
 
 
 </head>
@@ -58,12 +50,12 @@
 
 <aside>
   <div>
-    <a href="/">
-      <img src="/theme/img/profile.png" alt="" title="">
+    <a href="../">
+      <img src="../theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="/"></a>
+      <a href="../"></a>
     </h1>
 
 
@@ -74,34 +66,31 @@
 
             <li>
               <a target="_self"
-                 href="/pages/about.html#about">
-                | About |
+                 href="../pages/about.html#about">
+                About
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/contact.html#contact">
-                | Contact |
+                 href="../pages/contact.html#contact">
+                Contact
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="/pages/reviews.html#reviews">
-                | Product Reviews |
-              </a>
-            </li>
-            <li>
-              <a target="_self"
-                 href="/pages/rides.html#rides">
-                | Rides |
+                 href="../pages/rides.html#rides">
+                Rides
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
+            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
           </li>
           <li>
-            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
+            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
+          </li>
+          <li>
+            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
           </li>
       </ul>
     </nav>
@@ -145,7 +134,7 @@
 <article class="single">
   <header>
     
-    <h1 id="rides">| Rides |</h1>
+    <h1 id="rides">Rides</h1>
   </header>
   <div>
 <p>In addition to custom vacation packages, available year-round, here is our 2024 ride calendar:</p>
@@ -160,28 +149,28 @@
 <tbody>
 <tr>
 <td style="text-align: center;">1/1/2024</td>
-<td style="text-align: left;"><a href="../polarbearrun2024.html">Polar Bear Run</a></td>
+<td style="text-align: left;">Polar Bear Run</td>
 <td style="text-align: left;">Annual New Year's Day Ride</td>
 </tr>
 <tr>
 <td style="text-align: center;">2/28/2024</td>
-<td style="text-align: left;"><a href="../daytona-bike-week.html">Sunshine Run</a></td>
-<td style="text-align: left;">Event: Daytona Bike Week</td>
+<td style="text-align: left;">Sunshine Run</td>
+<td style="text-align: left;">Run from Ohio to Daytona Bike Week</td>
 </tr>
 <tr>
 <td style="text-align: center;">4/16/2024</td>
-<td style="text-align: left;"><a href="../first-city-run.html">First City Run</a></td>
-<td style="text-align: left;">Event: Motorcycles &amp; Music Revival</td>
+<td style="text-align: left;">Fist City Run</td>
+<td style="text-align: left;">Run to Motorcycles &amp; Music Revival</td>
 </tr>
 <tr>
 <td style="text-align: center;">5/24/2024</td>
-<td style="text-align: left;"><a href="../ohio-bike-week.html#ohio-bike-week">Buckeye Run</a></td>
-<td style="text-align: left;">Event: Ohio Bike Week</td>
+<td style="text-align: left;">Buckeye Run</td>
+<td style="text-align: left;">Run to Ohio Bike Week</td>
 </tr>
 <tr>
 <td style="text-align: center;">7/11/2024</td>
 <td style="text-align: left;">Lincoln Run</td>
-<td style="text-align: left;">Event: Gettysburg Bike Week</td>
+<td style="text-align: left;">Run to Gettysburg Bike Week</td>
 </tr>
 <tr>
 <td style="text-align: center;">8/1/2024</td>
@@ -236,7 +225,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "",
+  "url" : "..",
   "image": "",
   "description": ""
 }
